'experimental_feature_beta' class removed

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -426,7 +426,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="switch-control-and-label experimental_feature_beta" data-toggle="tooltip"
+                                <div class="switch-control-and-label" data-toggle="tooltip"
                                      data-placement="right"
                                      title="
                                         {{ _('All engravings are processed line by line from bottom to top.') }}
