SW-661 added german translation

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -447,7 +447,7 @@
                                         </ul>">
                                     <label class="control-label">
                                         <span>{{ _('Prevent unwanted burn marks') }}</span>
-                                        <span class="text-success"><strong>({{ _('This feature has been disabled as the burn marks issue has been resolved in our Software') }})</strong></span>
+                                        <span class="text-success"><strong>({{ _('This feature has been disabled as the burn marks issue has been resolved in our Software.') }})</strong></span>
                                     </label>
                                     <div class="controls">
                                         <div class="btn-group" data-toggle="buttons-radio">
