SW-1090 add native lazy loading of images

--- a/octoprint_mrbeam/templates/calibration/user/view_lens_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_lens_calibration.jinja2
@@ -2,7 +2,7 @@
 <div>
     <div class="camera-calibration-title">
         <button class="btn" data-bind="click: abortLensCalibration">
-            <img src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
+            <img loading="lazy" src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
         </button>
         <span>{{ _('Lens Calibration') }}</span>
     </div>
