--- a/octoprint_mrbeam/templates/calibration/watterott/tab_calibration_qa.jinja2
+++ b/octoprint_mrbeam/templates/calibration/watterott/tab_calibration_qa.jinja2
@@ -26,10 +26,10 @@
     </div>
 </div>
 <ul>
-    <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad1.jpg" /></li>
-    <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad2.jpg" /></li>
-    <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad3.jpg" /></li>
-    <li class="example good_example"><img src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_good.jpg" /></li>
+    <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad1.jpg" /></li>
+    <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad2.jpg" /></li>
+    <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_bad3.jpg" /></li>
+    <li class="example good_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/qa_final_rectangle_good.jpg" /></li>
 </ul>
 </div>
 <div class="qa_list_and_next">
