--- a/octoprint_mrbeam/templates/calibration/watterott/tab_camera_alignment.jinja2
+++ b/octoprint_mrbeam/templates/calibration/watterott/tab_camera_alignment.jinja2
@@ -11,9 +11,9 @@
     </div>
     <div class="qa_text">
         <ul>
-            <li class="example good_example"><img src="/plugin/mrbeam/static/img/calibration/camalignment_ok.jpg" /></li>
-            <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/camalignment_marker_cropped.jpg" /></li>
-            <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/camalignment_bottom_cropped.jpg" /></li>
+            <li class="example good_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/camalignment_ok.jpg" /></li>
+            <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/camalignment_marker_cropped.jpg" /></li>
+            <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/camalignment_bottom_cropped.jpg" /></li>
         </ul>
     </div>
 </div>
