--- a/octoprint_mrbeam/templates/calibration/watterott/tab_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/watterott/tab_corner_calibration.jinja2
@@ -75,12 +75,12 @@
     </div>
     <div id="corner_calibration_debug" data-bind="visible: window.mrbeam.isWatterottMode() ">
         <div>
-            <img id="debug_NW_img" class="marker_debug_image" data-bind="attr: {src: dbNWImgUrl()}"/>
-            <img id="debug_NE_img" class="marker_debug_image" data-bind="attr: {src: dbNEImgUrl()}"/>
+            <img loading="lazy" id="debug_NW_img" class="marker_debug_image" data-bind="attr: {src: dbNWImgUrl()}"/>
+            <img loading="lazy" id="debug_NE_img" class="marker_debug_image" data-bind="attr: {src: dbNEImgUrl()}"/>
         </div>
         <div>
-            <img id="debug_SW_img" class="marker_debug_image" data-bind="attr: {src: dbSWImgUrl()}"/>
-            <img id="debug_SE_img" class="marker_debug_image" data-bind="attr: {src: dbSEImgUrl()}"/>
+            <img loading="lazy" id="debug_SW_img" class="marker_debug_image" data-bind="attr: {src: dbSWImgUrl()}"/>
+            <img loading="lazy" id="debug_SE_img" class="marker_debug_image" data-bind="attr: {src: dbSEImgUrl()}"/>
         </div>
     </div>
 </div>
