--- a/octoprint_mrbeam/templates/calibration/watterott/tab_lens_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/watterott/tab_lens_calibration.jinja2
@@ -86,8 +86,8 @@
                 <div id="qa_undistorted_guides"></div>
             </div>
             <ul>
-                <li class="example good_example"><img src="/plugin/mrbeam/static/img/calibration/undistorted_ok.jpg" /></li>
-                <li class="example bad_example"><img src="/plugin/mrbeam/static/img/calibration/undistorted_bad1.jpg" /></li>
+                <li class="example good_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/undistorted_ok.jpg" /></li>
+                <li class="example bad_example"><img loading="lazy" src="/plugin/mrbeam/static/img/calibration/undistorted_bad1.jpg" /></li>
             </ul>
         </div>
         <div data-bind="text: lensCalibrationNpzFileVerboseDate"></div>
