--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -40,7 +40,7 @@
         </div>
         <div class="modal-body">
 
-            <img data-bind='visible: is_dust_mode()' src="/plugin/mrbeam/static/img/dusting.jpg">
+            <img loading="lazy" data-bind='visible: is_dust_mode()' src="/plugin/mrbeam/static/img/dusting.jpg">
             <h5 data-bind='visible: is_dust_mode()'>{{ _('Please wait a few seconds until Mr Beam cleared most of the dust particles out of the working area.') }}</h5>
             <h4 data-bind='readyToLaser.jobTimeEstimationCalculated'>{{ _('Laser job duration:') }} <span data-bind='text: job_duration_formatted()'>    </span>
                 <small>({{ _('Estimated:') }} <span data-bind='text: readyToLaser.jobTimeEstimationString'></span>)</small>
