--- a/octoprint_mrbeam/templates/lasersafety_genericbody.jinja2
+++ b/octoprint_mrbeam/templates/lasersafety_genericbody.jinja2
@@ -31,7 +31,7 @@
 
 </p>
 
-<img src="{{ url_for('plugin.mrbeam.static', filename=safety_img) }}" alt="safety labels"/>
+<img loading="lazy" src="{{ url_for('plugin.mrbeam.static', filename=safety_img) }}" alt="safety labels"/>
 
 <h3>{{ _('Safety Advisory:') }}</h3>
 <p>
