--- a/octoprint_mrbeam/templates/loginscreen_viewmodel.jinja2
+++ b/octoprint_mrbeam/templates/loginscreen_viewmodel.jinja2
@@ -1,7 +1,7 @@
 <div id="loginscreen_dialog" name="loginscreen" class="modal hide fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-header">
         <h3>
-            <img src="/plugin/mrbeam/static/img/mr_x120.png" style="height: 38px; width: auto;">
+            <img loading="lazy" src="/plugin/mrbeam/static/img/mr_x120.png" style="height: 38px; width: auto;">
             {{ _('Login') }}
         </h3>
     </div>
