--- a/octoprint_mrbeam/templates/settings/camera_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/camera_settings.jinja2
@@ -56,7 +56,7 @@
                         </a>
                     </td>
                     <td class="camera-picture">
-                        <img data-bind="attr: {src: statusRawImageUrl}"/>
+                        <img loading="lazy" data-bind="attr: {src: statusRawImageUrl}"/>
                         <a data-bind="attr: { href: statusRawImageUrl }">
                             <i class="fa fa-download" aria-hidden="true"></i>
                         </a>
