--- a/octoprint_mrbeam/templates/wizard/firstrun_end.jinja2
+++ b/octoprint_mrbeam/templates/wizard/firstrun_end.jinja2
@@ -1,5 +1,5 @@
 
-<img src="/plugin/mrbeam/static/img/welcome_dialog/end.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/end.png">
 
 <h3>{{ _('Done!') }}</h3>
 
