--- a/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
+++ b/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
@@ -1,4 +1,4 @@
-<img src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
 
 <h3>{{ _('Welcome to the Mr Beam community!') }}</h3>
 {% trans %}
