--- a/octoprint_mrbeam/templates/wizard/wizard_acl.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_acl.jinja2
@@ -1,5 +1,5 @@
 
-<img src="/plugin/mrbeam/static/img/welcome_dialog/acl.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/acl.png">
 
 <h3>{{ _('Set up your user account') }}</h3>
 
