--- a/octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2
@@ -3,7 +3,7 @@
 {# Wording changes must be done in both templates: wizard_analytics.jinja and analytics_settings.jinja !! #}
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! #}
 
-<img src="/plugin/mrbeam/static/img/welcome_dialog/analytics.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/analytics.png">
 
 <h3>{{ _("Analytics") }}</h3>
 {% set privacy_policy = _('/plugin/mrbeam/static/docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') %}
