--- a/octoprint_mrbeam/templates/wizard/wizard_lasersafety.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_lasersafety.jinja2
@@ -1,4 +1,4 @@
-<img src="/plugin/mrbeam/static/img/welcome_dialog/safety.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/safety.png">
 
 <h3>{{ _('Laser Safety') }}</h3>
 
