--- a/octoprint_mrbeam/templates/wizard/wizard_whatsnew_0.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_whatsnew_0.jinja2
@@ -1,18 +1,18 @@
 <h3 style="text-transform: uppercase; color: #e25303">
-    <img id="ds_title_stars" src="plugin/mrbeam/static/img/whatsnew_dialog/stars.svg" alt="">
+    <img loading="lazy" id="ds_title_stars" src="plugin/mrbeam/static/img/whatsnew_dialog/stars.svg" alt="">
     <span>{{ _("The new Mr Beam Design Store") }}</span>
 </h3>
 
 <div class="wizard-content">
     <div class="beta-news-ds-use-case-grid">
         <div>
-            <img class="wizard-shadowed-img" src="plugin/mrbeam/static/img/whatsnew_dialog/skyline_design.png" alt="">
+            <img loading="lazy" class="wizard-shadowed-img" src="plugin/mrbeam/static/img/whatsnew_dialog/skyline_design.png" alt="">
         </div>
         <div style="display: flex;">
-            <img class="beta-news-arrow" src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
+            <img loading="lazy" class="beta-news-arrow" src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
         </div>
         <div>
-            <img src="plugin/mrbeam/static/img/whatsnew_dialog/skyline_product.jpg" alt="">
+            <img loading="lazy" src="plugin/mrbeam/static/img/whatsnew_dialog/skyline_product.jpg" alt="">
         </div>
         <div>
             {{ _("Buy beautiful designs, integrated in your Mr&nbsp;Beam software") }}
@@ -24,7 +24,7 @@
     </div>
     <div class="beta-news-ds-info-grid">
         <div>
-            <img src="plugin/mrbeam/static/img/whatsnew_dialog/question_mark.svg" alt="">
+            <img loading="lazy" src="plugin/mrbeam/static/img/whatsnew_dialog/question_mark.svg" alt="">
         </div>
         <div style="display: flex;">
             <p style="margin: auto 0">
