--- a/octoprint_mrbeam/templates/wizard/wizard_whatsnew_1.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_whatsnew_1.jinja2
@@ -11,5 +11,5 @@
 <br>
 <br>
 <div>
-    <img src="plugin/mrbeam/static/img/whatsnew_dialog/mirroring_and_multiple_selections.PNG" alt="">
+    <img loading="lazy" src="plugin/mrbeam/static/img/whatsnew_dialog/mirroring_and_multiple_selections.PNG" alt="">
 </div>
