--- a/octoprint_mrbeam/templates/wizard/wizard_wifi.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_wifi.jinja2
@@ -1,4 +1,4 @@
-<img src="/plugin/mrbeam/static/img/welcome_dialog/wifi.png">
+<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/wifi.png">
 
 <h3>{{ _('Connecting to your Mr Beam') }}</h3>
 
@@ -10,9 +10,9 @@
 
         <table class="wizard-table">
             <tr>
-                <td><img src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_orange.gif"></td>
-                <td><img src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_green.gif"></td>
-                <td><img src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_white.gif"></td>
+                <td><img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_orange.gif"></td>
+                <td><img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_green.gif"></td>
+                <td><img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/status_lights_white.gif"></td>
             </tr>
             <tr>
                 <td class="wizard-table-caption">{{ _('Connect to your Mr Beam via %(strong_open)sfind.mr-beam.org%(strong_close)s', strong_open='<strong class="dont-break">', strong_close='</strong>') }}</td>
