--- a/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
@@ -2,7 +2,7 @@
 
     <div class="camera-calibration-title">
         <button class="btn" data-bind="click: abortCornerCalibration">
-            <img src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
+            <img loading="lazy" src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
         </button>
         <span>{{ _('Corner Calibration') }}</span>
     </div>
@@ -129,12 +129,12 @@
     <!-- Debug images of the marker detection present in each corner of the screen -->
     <div data-bind="visible: window.mrbeam.isWatterottMode()">
         <div>
-            <img id="debug_NW_img" class="marker_debug_image" data-bind="attr: {src: dbNWImgUrl()}"/>
-            <img id="debug_NE_img" class="marker_debug_image" data-bind="attr: {src: dbNEImgUrl()}"/>
+            <img loading="lazy" id="debug_NW_img" class="marker_debug_image" data-bind="attr: {src: dbNWImgUrl()}"/>
+            <img loading="lazy" id="debug_NE_img" class="marker_debug_image" data-bind="attr: {src: dbNEImgUrl()}"/>
         </div>
         <div>
-            <img id="debug_SW_img" class="marker_debug_image" data-bind="attr: {src: dbSWImgUrl()}"/>
-            <img id="debug_SE_img" class="marker_debug_image" data-bind="attr: {src: dbSEImgUrl()}"/>
+            <img loading="lazy" id="debug_SW_img" class="marker_debug_image" data-bind="attr: {src: dbSWImgUrl()}"/>
+            <img loading="lazy" id="debug_SE_img" class="marker_debug_image" data-bind="attr: {src: dbSEImgUrl()}"/>
         </div>
     </div>
 </div>
