--- a/octoprint_mrbeam/templates/quick_text.jinja2
+++ b/octoprint_mrbeam/templates/quick_text.jinja2
@@ -45,16 +45,16 @@
                     <div class="controls">
                         <div id="qt_round_text_section" class="straight">
                             <div  class="btn-group">
-                                <div id="quick_text_straight" class="btn active"><img src="/plugin/mrbeam/static/img/straight_text_paths.svg" alt="straight text"/></div>
+                                <div id="quick_text_straight" class="btn active"><img loading="lazy" src="/plugin/mrbeam/static/img/straight_text_paths.svg" alt="straight text"/></div>
                                 <div id="quick_text_cw" class="btn"><img src="/plugin/mrbeam/static/img/round_text_outside_paths.svg" alt="round text" class="round-text-icon clockwise pull-right"/></div>
                                 <div id="quick_text_ccw" class="btn"><img src="/plugin/mrbeam/static/img/round_text_inside_paths.svg" alt="round text" class="round-text-icon counterclockwise pull-right"/></div>
                             </div>
                             <input id="quick_text_dialog_circle" class="mrb_slider" type="range" min="0" max="100" value="0" />
                         </div>
             <!--			<div id="qt_round_text_section" class="clockwise">
-                            <img src="/plugin/mrbeam/static/img/straight_text.svg" alt="straight text"/>
-                            <img src="/plugin/mrbeam/static/img/round_text_outside.svg" alt="round text" class="round-text-icon clockwise pull-right"/>
-                            <img src="/plugin/mrbeam/static/img/round_text_inside.svg" alt="round text" class="round-text-icon counterclockwise pull-right"/>
+                            <img loading="lazy" src="/plugin/mrbeam/static/img/straight_text.svg" alt="straight text"/>
+                            <img loading="lazy" src="/plugin/mrbeam/static/img/round_text_outside.svg" alt="round text" class="round-text-icon clockwise pull-right"/>
+                            <img loading="lazy" src="/plugin/mrbeam/static/img/round_text_inside.svg" alt="round text" class="round-text-icon counterclockwise pull-right"/>
                             <input id="quick_text_dialog_circle" class="precisionslider padding-top" type="range" min="0" max="100" value="0" />
                         </div>
                         <div id="quick_text_dialog_clockwise" class="mini_switch">
