--- a/octoprint_mrbeam/templates/support_standalone.jinja2
+++ b/octoprint_mrbeam/templates/support_standalone.jinja2
@@ -6,7 +6,7 @@
         </h3>
     </div>
     <div class="modal-body scrollable">
-        <img src="/plugin/mrbeam/static/img/welcome_dialog/end.png">
+        <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/end.png">
         {% include "support_genericbody.jinja2" %}
 
     </div>
