--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -665,7 +665,7 @@
                            onclick="mrbeam.openOfflineKbUrl('43000073345_Focusing_the_laser_head.pdf');">
                             <i class="icon-file-text" aria-hidden="true"></i> {{ _(' Learn how to do this.') }}</a>
                     </p>
-                    <img id="laserhead_focus_reminder_image" src="/plugin/mrbeam/static/img/focus_reminder.png">
+                    <img loading="lazy" id="laserhead_focus_reminder_image" src="/plugin/mrbeam/static/img/focus_reminder.png">
                     <div id="laserhead_focus_reminder_alert">
                         <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                         <span>{{ _('Reminder: Never remove any components while your Mr Beam is switched on! To make sure your Mr Beam is turned off, take out the key and unplug the power supply.') }}</span>
