SW-289 Disabling the "filter" CSS breaking the dragging effect animation

--- a/octoprint_mrbeam/static/css/tab_workingarea.css
+++ b/octoprint_mrbeam/static/css/tab_workingarea.css
@@ -780,7 +780,7 @@ body.ctrlKey #translateHandle {
 #crosshairDummy circle.dot {
   stroke: #000000;
   opacity: 0.5;
-  filter: url(#designHighlight);
+  /*filter: url(#designHighlight);*/
 }
 
 #crosshairDummy circle.dragger,
