work in progress...

--- a/octoprint_mrbeam/templates/tab_terminal.jinja2
+++ b/octoprint_mrbeam/templates/tab_terminal.jinja2
@@ -67,7 +67,7 @@
                                                 </li>
                                                 <li>
                                                     <span class="gcommand">G4</span>:
-                                                    <span class="desc">{{ _('dwell, pasue') }}</span>
+                                                    <span class="desc">{{ _('dwell, pause') }}</span>
                                                     <div class="params">{{ _('parameters: value in seconds') }} P</div>
                                                     <div class="example">{{ _('example:') }} G4 P0.5</div>
                                                 </li>
