--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -50,7 +50,7 @@
 
 													<div class="row-fluid print-control btn-group" style="display: none;" data-bind="visible: loginState.isUser">
 														<button id="laser_button" class="btn btn-danger span6"
-                                                                data-bind="click: conversion.show_conversion_dialog, enable: state.isOperational() && state.isReady() && !state.isPrinting() && !state.isPaused() && loginState.isUser() && !workingArea.working_area_empty(), attr: {title: state.titlePrintButton}"
+                                                                data-bind="click: conversion.show_conversion_dialog, enable:  state.isReady() && !state.isPrinting() && !state.isPaused() && loginState.isUser() && !workingArea.working_area_empty(), attr: {title: state.titlePrintButton}"
                                                                 id="job_print">
                                                             <i class="icon-white icon-fire"
                                                                data-bind="css: { 'wobble': state.isPrinting()}"></i>
