Revert "Merge branch 'feature/SW-244-instant-job-time-estimation' into feature/SW-990-create-and-test-a-feature-branch-including-the-attached-tickets"
This reverts commit cd2d1390a4053a5985b70ced67328e49b28542b8.

--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -847,7 +847,8 @@
 										},
 										event: { wheel: wheel_zoom_wa, mousemove: mouse_drag_wa }
 									 "
-									 xmlns:mb="http://www.mr-beam.org/mbns" onkeydown="this.classList.add('ctrl')">
+									 xmlns:mb="http://www.mr-beam.org/mbns" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                     onkeydown="this.classList.add('ctrl')">
 								<defs>
 									<filter id="grayscale_filter">
 										<feColorMatrix in="SourceGraphic" type="saturate" values="0"/>
